// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counterContainerReducer handles the decrementAction action snapshot 1`] = `
Immutable.Map {
  "value": -1,
}
`;

exports[`counterContainerReducer handles the incrementAction action snapshot 1`] = `
Immutable.Map {
  "value": 1,
}
`;

exports[`counterContainerReducer handles the incrementActionAsync action snapshot 1`] = `
Immutable.Map {
  "value": 0,
}
`;

exports[`counterContainerReducer returns the initial state snapshot 1`] = `
Immutable.Map {
  "value": 0,
}
`;
